--- a/fielder_data.toml
+++ b/fielder_data.toml
@@ -1,8 +1,10 @@
-zombies = [
-  {name= "Nayeon", x=  3800, y=  2560, size = 1.0},
-  {name= "Momo"  , x=  4000, y=  2560, size = 1.1},
-  {name= "Sana"  , x=  4600, y=  2560, size = 1.3},
-  {name= "Mina"  , x=  4800, y=  2560, size = 0.9},
-  {name= "Zwi"   , x=  5000, y=  2560, size = 1.4}
+fielders = [
+  {name= "1B", x=  3800, y=  2560, size = 1.0},
+  {name= "2B"  , x=  4000, y=  2560, size = 1.1},
+  {name= "SS"  , x=  4600, y=  2560, size = 1.3},
+  {name= "3B"  , x=  4800, y=  2560, size = 0.9},
+  {name= "LF"   , x=  5000, y=  2560, size = 1.4},
+  {name= "CF", x=  3800, y=  2560, size = 1.0},
+  {name= "RF"  , x=  4000, y=  2560, size = 1.1}
 ]
 
